Add content for home page, and set menu navbar

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,9 @@
         <li><a href="mailto:alexandre.ravichandran@gmail.com" class="icon solid fa-envelope"><span
                     class="label">Mail</span></a></li>
     </ul>
+    <ul class="copyright">
+        <li>Basé sur un template réalisé par @ajlkn</li>
+    </ul>
 </footer>
 
 </div>
