--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,15 +12,27 @@
     <section id="one" class="wrapper style1 special">
         <div class="inner">
             <header class="major">
-                <h2>Arcu aliquet vel lobortis ata nisl<br />
-                    eget augue amet aliquet nisl cep donec</h2>
-                <p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-                    fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+                <h2>A propos de moi</h2>
+                <p>Anciennement dans le domaine de la qualité, j'ai décidé en 2020 de me reconvertir dans le domaine du
+                    développement, et plus précisement dans le domaine du développement web. Apres avoir passé 1 an en
+                    autodidacte, j'ai décidé de suivre une formation intensive à <a href="https://oclock.io/">O'clock</a>, afin de valider mes
+                    competences et corriger mes mauvaises pratiques.</p>
+                <p>Durant mon année en autodidacte, j'ai eu une enorme préférence pour le coté Back-end du développement
+                    web, préférence qui n'a cessé d'accroitre lors de mon apprentissage de Symfony. Il etait donc
+                    evident pour moi de me spécialiser dans le coté back.</p>
+                <ul class="icons">
+                    <li><a style="font-size: 50px;" href="https://www.linkedin.com/in/alexandre-ravichandran-246743142"
+                            class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+                    <li><a style="font-size: 50px;" href="https://github.com/AlexandreRavichandran"
+                            class="icon brands fa-github"><span class="label">Github</span></a></li>
+                    <li><a style="font-size: 50px;" href="mailto:alexandre.ravichandran@gmail.com"
+                            class="icon solid fa-envelope"><span class="label">Mail</span></a></li>
+                </ul>
             </header>
         </div>
     </section>
     <section id="two" class="wrapper alt style2">
-        <div style="padding-top: 25px;" class="inner">
+        <div style="padding-top: 60px;" class="inner">
             <header style="text-align: center;" class="major">
                 <h2>Portfolio<br /></h2>
                 <p>Vous trouverez ci-dessous différents projets que j'ai réalisé durant mon apprentissage du
@@ -32,7 +44,7 @@
             <div class="content">
                 <h2>Spacetrip</h2>
                 <p>Agence (fictive) de voyages de l'espace</p>
-                <a class="projectLinks" href="projects/spacetrip/index.html">Voir plus</a>
+                <a class="projectLinks" href="/spacetrip">Voir plus</a>
             </div>
         </section>
         <section class="spotlight">
@@ -41,7 +53,7 @@
                 <h2>Quiver</h2>
                 <span> En cours </span>
                 <p>Clone de Quora, un réseau social-forum pour poser et repondre à des questions</p>
-                <a class="projectLinks" href="">Voir plus</a>
+                <a class="projectLinks" href="/quiver">Voir plus</a>
             </div>
         </section>
         <section class="spotlight">
@@ -50,7 +62,7 @@
                 <h2>Pomodoro-timer</h2>
                 <p>Application de minuteur permettant d'appliquer la méthode POMODORO, une methode permettant
                     d'optimiser la concentration et la productivité</p>
-                <a class="projectLinks" href="">Voir plus</a>
+                <a class="projectLinks" href="/pomodoro">Voir plus</a>
             </div>
         </section>
         <section class="spotlight">
@@ -59,11 +71,41 @@
                 <h2>Flash-livraison</h2>
                 <span> En cours </span>
                 <p>Site vitrine pour l'entreprise Flash Livraison</p>
-                <a class="projectLinks" href="">Voir plus</a>
+                <a class="projectLinks" href="/flash-livraison">Voir plus</a>
             </div>
         </section>
     </section>
     <section id="three" class="wrapper style3 special">
+        <div class="inner">
+            <header class="major">
+                <h2>Accumsan mus tortor nunc aliquet</h2>
+
+            </header>
+            <ul class="features">
+                <li style="width:100%" class="icon fa-paper-plane">
+                    <h3>Langages</h3>
+                    <img src="images/languages/html5.jpg">
+                </li>
+
+                <li class="icon solid fa-laptop">
+                    <h3>Frameworks CSS</h3>
+                </li>
+
+                <li class="icon solid fa-code">
+                    <h3>Frameworks/technologies Back-end</h3>
+                </li>
+
+                <li class="icon solid fa-headphones-alt">
+                    <h3>Solutions de déploiement</h3>
+                </li>
+
+                <li class="icon fa-heart">
+                    <h3>Environnements</h3>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section id="four" class="wrapper style3 special">
         <div class="inner">
             <header class="major">
                 <h2>Accumsan mus tortor nunc aliquet</h2>
