--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,3 +1,5 @@
+{% include header.html %}
+
 <article id="main">
     <header>
         <h2>Generic Page</h2>
@@ -43,3 +45,5 @@
         </div>
     </section>
 </article>
+
+{% include footer.html %}
