--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
 	<title>Alexandre RAVICHANDRAN - Website</title>
 	<meta charset="utf-8" />
@@ -24,11 +25,12 @@
 						<a href="#menu" class="menuToggle"><span>Menu</span></a>
 						<div id="menu">
 							<ul><i class=""></i>
-								<li><a href="#one">Home</a></li>
+								<li><a href="/">Home</a></li>
+								<li><a href="/#one">A propos de moi</a></li>
+								<li><a href="/#two">Portfolio</a></li>
 								<li><a href="#three">Competences</a></li>
-								<li><a href="#two">Portfolio</a></li>
-								<li><a href="#one">Parcours</a></li>
-								<li><a href="#cta">Coordonnées/Contact</a></li>
+								<li><a href="/#four">Parcours</a></li>
+								<li><a href="/#cta">Coordonnées/Contact</a></li>
 							</ul>
 						</div>
 					</li>
