Add content for home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,11 +15,14 @@
                 <h2>A propos de moi</h2>
                 <p>Anciennement dans le domaine de la qualité, j'ai décidé en 2020 de me reconvertir dans le domaine du
                     développement, et plus précisement dans le domaine du développement web. Apres avoir passé 1 an en
-                    autodidacte, j'ai décidé de suivre une formation intensive à <a href="https://oclock.io/">O'clock</a>, afin de valider mes
-                    competences et corriger mes mauvaises pratiques.</p>
+                    autodidacte, j'ai décidé de suivre une formation intensive à <a
+                        href="https://oclock.io/">O'clock</a>, afin de valider mes
+                    competences et corriger mes mauvaises pratiques. Parallelement a cette formation, j'ai également
+                    effectué des projets personnels pour solidifier mes competences.</p>
                 <p>Durant mon année en autodidacte, j'ai eu une enorme préférence pour le coté Back-end du développement
                     web, préférence qui n'a cessé d'accroitre lors de mon apprentissage de Symfony. Il etait donc
-                    evident pour moi de me spécialiser dans le coté back.</p>
+                    evident pour moi de me spécialiser dans le coté back. Cependant, j'essaye également de m'interesser
+                    aux technologies Front-End, comme React et Vue.js</p>
                 <ul class="icons">
                     <li><a style="font-size: 50px;" href="https://www.linkedin.com/in/alexandre-ravichandran-246743142"
                             class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
@@ -43,7 +46,42 @@
             <div class="image"><img src="http://placehold.it/748x529" alt="" /></div>
             <div class="content">
                 <h2>Spacetrip</h2>
+
                 <p>Agence (fictive) de voyages de l'espace</p>
+                <ul style="display: flex;flex-wrap: wrap;">
+                    <li class="language">
+                        <img src="/assets/css/images/languages/html.svg" alt="">
+                        <p>HTML</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/css.svg" alt="">
+                        <p>CSS</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/php.svg" alt="">
+                        <p>PHP</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/javascript.svg" alt="">
+                        <p>Javascript</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/bootstrap.svg" alt="">
+                        <p>Bootstrap</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/mysql.svg" alt="">
+                        <p>MySQL</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/symfony.svg" alt="">
+                        <p>Symfony</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/heroku.svg" alt="">
+                        <p>Heroku</p>
+                    </li>
+                </ul>
                 <a class="projectLinks" href="/spacetrip">Voir plus</a>
             </div>
         </section>
@@ -53,6 +91,40 @@
                 <h2>Quiver</h2>
                 <span> En cours </span>
                 <p>Clone de Quora, un réseau social-forum pour poser et repondre à des questions</p>
+                <ul style="display: flex;flex-wrap: wrap;">
+                    <li class="language">
+                        <img src="/assets/css/images/languages/html.svg" alt="">
+                        <p>HTML</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/css.svg" alt="">
+                        <p>CSS</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/php.svg" alt="">
+                        <p>PHP</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/javascript.svg" alt="">
+                        <p>Javascript</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/tailwind.svg" alt="">
+                        <p>Tailwind</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/mysql.svg" alt="">
+                        <p>MySQL</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/symfony.svg" alt="">
+                        <p>Symfony</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/heroku.svg" alt="">
+                        <p>Heroku</p>
+                    </li>
+                </ul>
                 <a class="projectLinks" href="/quiver">Voir plus</a>
             </div>
         </section>
@@ -62,75 +134,124 @@
                 <h2>Pomodoro-timer</h2>
                 <p>Application de minuteur permettant d'appliquer la méthode POMODORO, une methode permettant
                     d'optimiser la concentration et la productivité</p>
+                <ul style="display: flex;flex-wrap: wrap;">
+                    <li class="language">
+                        <img src="/assets/css/images/languages/html.svg" alt="">
+                        <p>HTML</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/css.svg" alt="">
+                        <p>CSS</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/php.svg" alt="">
+                        <p>PHP</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/javascript.svg" alt="">
+                        <p>Javascript</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/bootstrap.svg" alt="">
+                        <p>Bootstrap</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/heroku.svg" alt="">
+                        <p>Heroku</p>
+                    </li>
+                </ul>
                 <a class="projectLinks" href="/pomodoro">Voir plus</a>
-            </div>
-        </section>
-        <section class="spotlight">
-            <div class="image"><img src="http://placehold.it/748x529" alt="" /></div>
-            <div class="content">
-                <h2>Flash-livraison</h2>
-                <span> En cours </span>
-                <p>Site vitrine pour l'entreprise Flash Livraison</p>
-                <a class="projectLinks" href="/flash-livraison">Voir plus</a>
             </div>
         </section>
     </section>
     <section id="three" class="wrapper style3 special">
         <div class="inner">
             <header class="major">
-                <h2>Accumsan mus tortor nunc aliquet</h2>
-
+                <h2>Competences</h2>
             </header>
             <ul class="features">
-                <li style="width:100%" class="icon fa-paper-plane">
+                <li style="width:100% " class="icon fa-paper-plane">
                     <h3>Langages</h3>
-                    <img src="images/languages/html5.jpg">
+                    <div style="display:flex">
+                        <div class="language">
+                            <img src="/assets/css/images/languages/html.svg" alt="">
+                            <p>HTML</p>
+                        </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/css.svg" alt="">
+                            <p>CSS</p>
+                        </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/php.svg" alt="">
+                            <p>PHP</p>
+                        </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/javascript.svg" alt="">
+                            <p>Javascript</p>
+                        </div>
+                    </div>
                 </li>
 
                 <li class="icon solid fa-laptop">
                     <h3>Frameworks CSS</h3>
+                    <div style="display:flex">
+                        <div class="language">
+                            <img src="/assets/css/images/languages/bootstrap.svg" alt="">
+                            <p>Bootstrap</p>
+                        </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/tailwind.svg" alt="">
+                            <p>Tailwind</p>
+                        </div>
+                    </div>
+
                 </li>
 
                 <li class="icon solid fa-code">
-                    <h3>Frameworks/technologies Back-end</h3>
+                    <h3>Back-end</h3>
+                    <div style="display:flex">
+                        <div class="language">
+                            <img src="/assets/css/images/languages/mysql.svg" alt="">
+                            <p>MySQL</p>
+                        </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/symfony.svg" alt="">
+                            <p>Symfony</p>
+                        </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/lumen.svg" alt="">
+                            <p>Lumen</p>
+                        </div>
+                    </div>
                 </li>
 
                 <li class="icon solid fa-headphones-alt">
-                    <h3>Solutions de déploiement</h3>
+                    <h3>Déploiement</h3>
+                    <div style="display:flex">
+                        <div class="language">
+                            <img src="/assets/css/images/languages/heroku.svg" alt="">
+                            <p>Heroku</p>
+                        </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/aws.svg" alt="">
+                            <p>AWS</p>
+                        </div>
+                    </div>
                 </li>
 
                 <li class="icon fa-heart">
                     <h3>Environnements</h3>
-                </li>
-            </ul>
-        </div>
-    </section>
-    <section id="four" class="wrapper style3 special">
-        <div class="inner">
-            <header class="major">
-                <h2>Accumsan mus tortor nunc aliquet</h2>
-
-            </header>
-            <ul class="features">
-                <li style="width:100%" class="icon fa-paper-plane">
-                    <h3>Langages</h3>
-                    <img src="images/languages/html5.jpg">
-                </li>
-
-                <li class="icon solid fa-laptop">
-                    <h3>Frameworks CSS</h3>
-                </li>
-
-                <li class="icon solid fa-code">
-                    <h3>Frameworks/technologies Back-end</h3>
-                </li>
-
-                <li class="icon solid fa-headphones-alt">
-                    <h3>Solutions de déploiement</h3>
-                </li>
-
-                <li class="icon fa-heart">
-                    <h3>Environnements</h3>
+                    <div style="display:flex">
+                        <div class="language">
+                            <img src="/assets/css/images/languages/gnu.svg" alt="">
+                            <img src="/assets/css/images/languages/linux.svg" alt="">
+                            <p>GNU-Linux</p>
+                        </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/mamp.svg" alt="">
+                            <p>MAMP</p>
+                        </div>
+                    </div>
                 </li>
             </ul>
         </div>
