Add CV link and document itself

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,12 @@
                 <p>Durant mon année en autodidacte, j'ai eu une enorme préférence pour le coté Back-end du développement
                     web, préférence qui n'a cessé d'accroitre lors de mon apprentissage de Symfony. Il etait donc
                     evident pour moi de me spécialiser dans le coté back. Cependant, j'essaye également de m'interesser
-                    aux technologies Front-End, comme React et Vue.js</p>
+                    aux technologies Front-End, comme React et Vue.js.</p>
+                <div style="display:flex;justify-content: center;margin-bottom: 30px;">
+                    <a style="display:block;background-color: black;padding: 15px;border-radius: 15px;width:180px;font-weight: bold;"
+                        href="/assets/docs/CV_Alexandre_RAVICHANDRAN_Back_End.pdf">Voir mon
+                        CV</a>
+                </div>
                 <ul class="icons">
                     <li><a style="font-size: 50px;" href="https://www.linkedin.com/in/alexandre-ravichandran-246743142"
                             class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
@@ -47,7 +52,7 @@
             <div class="content">
                 <h2>Spacetrip</h2>
 
-                <p>Agence (fictive) de voyages de l'espace</p>
+                <p>Agence (fictive) de voyages de l'espace.</p>
                 <ul style="display: flex;flex-wrap: wrap;">
                     <li class="language">
                         <img src="/assets/css/images/languages/html.svg" alt="">
@@ -90,7 +95,7 @@
             <div class="content">
                 <h2>Quiver</h2>
                 <span> En cours </span>
-                <p>Clone de Quora, un réseau social-forum pour poser et repondre à des questions</p>
+                <p>Clone de Quora, un réseau social-forum pour poser et repondre à des questions.</p>
                 <ul style="display: flex;flex-wrap: wrap;">
                     <li class="language">
                         <img src="/assets/css/images/languages/html.svg" alt="">
@@ -133,7 +138,7 @@
             <div class="content">
                 <h2>Pomodoro-timer</h2>
                 <p>Application de minuteur permettant d'appliquer la méthode POMODORO, une methode permettant
-                    d'optimiser la concentration et la productivité</p>
+                    d'optimiser la concentration et la productivité.</p>
                 <ul style="display: flex;flex-wrap: wrap;">
                     <li class="language">
                         <img src="/assets/css/images/languages/html.svg" alt="">
@@ -170,7 +175,7 @@
                 <h2>Competences</h2>
             </header>
             <ul class="features">
-                <li style="width:100% " class="icon fa-paper-plane">
+                <li style="width:100% " class="icon solid fa-code">
                     <h3>Langages</h3>
                     <div style="display:flex">
                         <div class="language">
@@ -192,7 +197,7 @@
                     </div>
                 </li>
 
-                <li class="icon solid fa-laptop">
+                <li class="icon solid fa-desktop">
                     <h3>Frameworks CSS</h3>
                     <div style="display:flex">
                         <div class="language">
@@ -207,7 +212,7 @@
 
                 </li>
 
-                <li class="icon solid fa-code">
+                <li class="icon solid fa-server">
                     <h3>Back-end</h3>
                     <div style="display:flex">
                         <div class="language">
@@ -225,12 +230,13 @@
                     </div>
                 </li>
 
-                <li class="icon solid fa-headphones-alt">
+                <li class="icon solid fa-cloud">
                     <h3>Déploiement</h3>
                     <div style="display:flex">
                         <div class="language">
                             <img src="/assets/css/images/languages/heroku.svg" alt="">
                             <p>Heroku</p>
+
                         </div>
                         <div class="language">
                             <img src="/assets/css/images/languages/aws.svg" alt="">
@@ -239,9 +245,9 @@
                     </div>
                 </li>
 
-                <li class="icon fa-heart">
+                <li class="icon solid fa-cogs">
                     <h3>Environnements</h3>
-                    <div style="display:flex">
+                    <div style="display:flex;flex-wrap: wrap;">
                         <div class="language">
                             <img src="/assets/css/images/languages/gnu.svg" alt="">
                             <img src="/assets/css/images/languages/linux.svg" alt="">
@@ -250,6 +256,10 @@
                         <div class="language">
                             <img src="/assets/css/images/languages/mamp.svg" alt="">
                             <p>MAMP</p>
+                        </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/git.svg" alt="">
+                            <p>Git</p>
                         </div>
                     </div>
                 </li>
