--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3995,7 +3995,7 @@ input, select, textarea {
 	.projectLinks{
 		padding: 15px 23px;
 		border-radius: 15px;
-		background-color: #00f0ff91;
+		background-color: #21b2a6;
 		text-decoration: none;
 		
 	}
