Fix several display bug

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@
                     evident pour moi de me spécialiser dans le coté back. Cependant, j'essaye également de m'interesser
                     aux technologies Front-End, comme React et Vue.js.</p>
                 <div style="display:flex;justify-content: center;margin-bottom: 30px;">
-                    <a style="display:block;background-color: black;padding: 15px;border-radius: 15px;width:180px;font-weight: bold;"
+                    <a style="text-decoration:none;display:block;background-color:rgb(0, 0, 0,0.7);padding: 15px;border-radius: 15px;width:180px;font-weight: bold;"
                         href="/assets/docs/CV_Alexandre_RAVICHANDRAN_Back_End.pdf">Voir mon
                         CV</a>
                 </div>
@@ -87,7 +87,9 @@
                         <p>Heroku</p>
                     </li>
                 </ul>
-                <a class="projectLinks" href="/spacetrip">Voir plus</a>
+                <div class="projectLinks">
+                    <a href="/spacetrip">Voir plus</a>
+                </div>
             </div>
         </section>
         <section class="spotlight">
@@ -130,7 +132,9 @@
                         <p>Heroku</p>
                     </li>
                 </ul>
-                <a class="projectLinks" href="/quiver">Voir plus</a>
+                <div class="projectLinks">
+                    <a href="/quiver">Voir plus</a>
+                </div>
             </div>
         </section>
         <section class="spotlight">
@@ -165,7 +169,9 @@
                         <p>Heroku</p>
                     </li>
                 </ul>
-                <a class="projectLinks" href="/pomodoro">Voir plus</a>
+                <div class="projectLinks">
+                    <a href="/pomodoro-timer">Voir plus</a>
+                </div>
             </div>
         </section>
     </section>
