--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,15 @@
 <footer id="footer">
     <ul class="icons">
-        <li><a href="https://www.linkedin.com/in/alexandre-ravichandran-246743142" class="icon brands fa-linkedin"><span
+        <li><a target="_blank" href="https://www.linkedin.com/in/alexandre-ravichandran-246743142" class="icon brands fa-linkedin"><span
                     class="label">Linkedin</span></a></li>
-        <li><a href="https://github.com/AlexandreRavichandran" class="icon brands fa-github"><span
+        <li><a target="_blank" href="https://github.com/AlexandreRavichandran" class="icon brands fa-github"><span
                     class="label">Github</span></a></li>
-        <li><a href="mailto:alexandre.ravichandran@gmail.com" class="icon solid fa-envelope"><span
+        <li><a target="_blank" href="mailto:alexandre.ravichandran@gmail.com" class="icon solid fa-envelope"><span
                     class="label">Mail</span></a></li>
     </ul>
     <ul class="copyright">
-        <li>Basé sur un template réalisé par @ajlkn</li>
+        <li>Basé sur un template sous licence <a href="https://creativecommons.org/licenses/by/3.0/">Creative Commons
+                Attribution 3.0 Unported (CC BY 3.0)</a></li>
     </ul>
 </footer>
 
