--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,16 +24,16 @@
                     evident pour moi de me spécialiser dans le coté back. Cependant, j'essaye également de m'interesser
                     aux technologies Front-End, comme React et Vue.js.</p>
                 <div style="display:flex;justify-content: center;margin-bottom: 30px;">
-                    <a style="text-decoration:none;display:block;background-color:rgb(0, 0, 0,0.7);padding: 15px;border-radius: 15px;width:180px;font-weight: bold;"
+                    <a target="_blank" style="text-decoration:none;display:block;background-color:rgb(0, 0, 0,0.7);padding: 15px;border-radius: 15px;width:180px;font-weight: bold;"
                         href="/assets/docs/CV_Alexandre_RAVICHANDRAN_Back_End.pdf">Voir mon
                         CV</a>
                 </div>
                 <ul class="icons">
-                    <li><a style="font-size: 50px;" href="https://www.linkedin.com/in/alexandre-ravichandran-246743142"
+                    <li><a target="_blank" style="font-size: 50px;" href="https://www.linkedin.com/in/alexandre-ravichandran-246743142"
                             class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-                    <li><a style="font-size: 50px;" href="https://github.com/AlexandreRavichandran"
+                    <li><a target="_blank" style="font-size: 50px;" href="https://github.com/AlexandreRavichandran"
                             class="icon brands fa-github"><span class="label">Github</span></a></li>
-                    <li><a style="font-size: 50px;" href="mailto:alexandre.ravichandran@gmail.com"
+                    <li><a target="_blank" style="font-size: 50px;" href="mailto:alexandre.ravichandran@gmail.com"
                             class="icon solid fa-envelope"><span class="label">Mail</span></a></li>
                 </ul>
             </header>
@@ -53,34 +53,22 @@
                 <h2>Spacetrip</h2>
 
                 <p>Agence (fictive) de voyages de l'espace.</p>
-                <ul style="display: flex;flex-wrap: wrap;">
+                <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
                     <li class="language">
-                        <img src="/assets/css/images/languages/html.svg" alt="">
-                        <p>HTML</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/css.svg" alt="">
-                        <p>CSS</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/php.svg" alt="">
-                        <p>PHP</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/javascript.svg" alt="">
-                        <p>Javascript</p>
+                        <img src="/assets/css/images/languages/symfony.svg" alt="">
+                        <p>Symfony</p>
                     </li>
                     <li class="language">
                         <img src="/assets/css/images/languages/bootstrap.svg" alt="">
                         <p>Bootstrap</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/mysql.svg" alt="">
-                        <p>MySQL</p>
+                        <img src="/assets/css/images/languages/javascript.svg" alt="">
+                        <p>Javascript</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/symfony.svg" alt="">
-                        <p>Symfony</p>
+                        <img src="/assets/css/images/languages/mysql.svg" alt="">
+                        <p>MySQL</p>
                     </li>
                     <li class="language">
                         <img src="/assets/css/images/languages/heroku.svg" alt="">
@@ -88,7 +76,7 @@
                     </li>
                 </ul>
                 <div class="projectLinks">
-                    <a href="/spacetrip">Voir plus</a>
+                    <a target="_blank" href="/spacetrip">Voir plus</a>
                 </div>
             </div>
         </section>
@@ -98,34 +86,23 @@
                 <h2>Quiver</h2>
                 <span> En cours </span>
                 <p>Clone de Quora, un réseau social-forum pour poser et repondre à des questions.</p>
-                <ul style="display: flex;flex-wrap: wrap;">
+                <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
+
                     <li class="language">
-                        <img src="/assets/css/images/languages/html.svg" alt="">
-                        <p>HTML</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/css.svg" alt="">
-                        <p>CSS</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/php.svg" alt="">
-                        <p>PHP</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/javascript.svg" alt="">
-                        <p>Javascript</p>
+                        <img src="/assets/css/images/languages/symfony.svg" alt="">
+                        <p>Symfony</p>
                     </li>
                     <li class="language">
                         <img src="/assets/css/images/languages/tailwind.svg" alt="">
                         <p>Tailwind</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/mysql.svg" alt="">
-                        <p>MySQL</p>
+                        <img src="/assets/css/images/languages/javascript.svg" alt="">
+                        <p>Javascript</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/symfony.svg" alt="">
-                        <p>Symfony</p>
+                        <img src="/assets/css/images/languages/mysql.svg" alt="">
+                        <p>MySQL</p>
                     </li>
                     <li class="language">
                         <img src="/assets/css/images/languages/heroku.svg" alt="">
@@ -133,7 +110,7 @@
                     </li>
                 </ul>
                 <div class="projectLinks">
-                    <a href="/quiver">Voir plus</a>
+                    <a target="_blank" href="/quiver">Voir plus</a>
                 </div>
             </div>
         </section>
@@ -143,26 +120,18 @@
                 <h2>Pomodoro-timer</h2>
                 <p>Application de minuteur permettant d'appliquer la méthode POMODORO, une methode permettant
                     d'optimiser la concentration et la productivité.</p>
-                <ul style="display: flex;flex-wrap: wrap;">
-                    <li class="language">
-                        <img src="/assets/css/images/languages/html.svg" alt="">
-                        <p>HTML</p>
-                    </li>
-                    <li class="language">
-                        <img src="/assets/css/images/languages/css.svg" alt="">
-                        <p>CSS</p>
-                    </li>
+                <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
                     <li class="language">
                         <img src="/assets/css/images/languages/php.svg" alt="">
                         <p>PHP</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/javascript.svg" alt="">
-                        <p>Javascript</p>
-                    </li>
-                    <li class="language">
                         <img src="/assets/css/images/languages/bootstrap.svg" alt="">
                         <p>Bootstrap</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/css/images/languages/javascript.svg" alt="">
+                        <p>Javascript</p>
                     </li>
                     <li class="language">
                         <img src="/assets/css/images/languages/heroku.svg" alt="">
@@ -170,7 +139,7 @@
                     </li>
                 </ul>
                 <div class="projectLinks">
-                    <a href="/pomodoro-timer">Voir plus</a>
+                    <a target="_blank" href="/pomodoro-timer">Voir plus</a>
                 </div>
             </div>
         </section>
@@ -204,7 +173,7 @@
                 </li>
 
                 <li class="icon solid fa-desktop">
-                    <h3>Frameworks CSS</h3>
+                    <h3>Front-end</h3>
                     <div style="display:flex">
                         <div class="language">
                             <img src="/assets/css/images/languages/bootstrap.svg" alt="">
@@ -213,6 +182,10 @@
                         <div class="language">
                             <img src="/assets/css/images/languages/tailwind.svg" alt="">
                             <p>Tailwind</p>
+                        </div>
+                        <div class="language">
+                            <img src="/assets/css/images/languages/jekyll.svg" alt="">
+                            <p>Jekyll</p>
                         </div>
                     </div>
 
@@ -242,7 +215,6 @@
                         <div class="language">
                             <img src="/assets/css/images/languages/heroku.svg" alt="">
                             <p>Heroku</p>
-
                         </div>
                         <div class="language">
                             <img src="/assets/css/images/languages/aws.svg" alt="">
