Add picture for each projects

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer id="footer">
     <ul class="icons">
-        <li><a target="_blank" href="https://www.linkedin.com/in/alexandre-ravichandran-246743142" class="icon brands fa-linkedin"><span
-                    class="label">Linkedin</span></a></li>
+        <li><a target="_blank" href="https://www.linkedin.com/in/alexandre-ravichandran-246743142"
+                class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
         <li><a target="_blank" href="https://github.com/AlexandreRavichandran" class="icon brands fa-github"><span
                     class="label">Github</span></a></li>
         <li><a target="_blank" href="mailto:alexandre.ravichandran@gmail.com" class="icon solid fa-envelope"><span
