--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,11 +48,11 @@
             </header>
         </div>
         <section class="spotlight">
-            <div class="image"><img src="http://placehold.it/748x529" alt="" /></div>
+            <div class="image"><img src="/assets/css/images/spacetrip.png" alt="" /></div>
             <div class="content">
                 <h2>Spacetrip</h2>
 
-                <p>Agence (fictive) de voyages de l'espace.</p>
+                <p>Agence (fictive) de voyages dans l'espace.</p>
                 <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
                     <li class="language">
                         <img src="/assets/css/images/languages/symfony.svg" alt="">
@@ -81,7 +81,8 @@
             </div>
         </section>
         <section class="spotlight">
-            <div class="image"><img src="http://placehold.it/748x529" alt="" /></div>
+            <div class="image"><img style="display:block" src="/assets/css/images/quiver.png" width="100%" alt=""></div>
+            <!-- 748x529 -->
             <div class="content">
                 <h2>Quiver</h2>
                 <span> En cours </span>
@@ -115,7 +116,7 @@
             </div>
         </section>
         <section class="spotlight">
-            <div class="image"><img src="http://placehold.it/748x529" alt="" /></div>
+            <div class="image"><img src="/assets/css/images/pomodoro.png" alt="" /></div>
             <div class="content">
                 <h2>Pomodoro-timer</h2>
                 <p>Application de minuteur permettant d'appliquer la méthode POMODORO, une methode permettant
@@ -152,7 +153,7 @@
             <ul class="features">
                 <li style="width:100% " class="icon solid fa-code">
                     <h3>Langages</h3>
-                    <div style="display:flex">
+                    <div style="display:flex;flex-wrap: wrap;">
                         <div class="language">
                             <img src="/assets/css/images/languages/html.svg" alt="">
                             <p>HTML</p>
@@ -174,7 +175,7 @@
 
                 <li class="icon solid fa-desktop">
                     <h3>Front-end</h3>
-                    <div style="display:flex">
+                    <div style="display:flex;flex-wrap: wrap;justify-content: center;">
                         <div class="language">
                             <img src="/assets/css/images/languages/bootstrap.svg" alt="">
                             <p>Bootstrap</p>
@@ -193,7 +194,7 @@
 
                 <li class="icon solid fa-server">
                     <h3>Back-end</h3>
-                    <div style="display:flex">
+                    <div style="display:flex;flex-wrap: wrap;justify-content: center;">
                         <div class="language">
                             <img src="/assets/css/images/languages/mysql.svg" alt="">
                             <p>MySQL</p>
@@ -211,7 +212,7 @@
 
                 <li class="icon solid fa-cloud">
                     <h3>Déploiement</h3>
-                    <div style="display:flex">
+                    <div style="display:flex;flex-wrap: wrap;justify-content: center;">
                         <div class="language">
                             <img src="/assets/css/images/languages/heroku.svg" alt="">
                             <p>Heroku</p>
@@ -225,7 +226,7 @@
 
                 <li class="icon solid fa-cogs">
                     <h3>Environnements</h3>
-                    <div style="display:flex;flex-wrap: wrap;">
+                    <div style="display:flex;flex-wrap: wrap;justify-content: center;">
                         <div class="language">
                             <img src="/assets/css/images/languages/gnu.svg" alt="">
                             <img src="/assets/css/images/languages/linux.svg" alt="">
