--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,7 +1,8 @@
 {% include header.html %}
 
 <article id="main">
-    <header style="background-image: url('/assets/css/images/{{page.image}}.jpg');">
+    <header
+        style="background-image: url('/assets/css/images/{{page.image}}-lg.png');background-size: 100%">
         <h2>{{page.title}}</h2>
         <p>{{page.description}}</p>
     </header>
