Add school experience section and design 404 page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
 								<li><a href="/">Home</a></li>
 								<li><a href="/#one">A propos de moi</a></li>
 								<li><a href="/#two">Portfolio</a></li>
-								<li><a href="#three">Competences</a></li>
+								<li><a href="/#three">Competences</a></li>
 								<li><a href="/#four">Parcours</a></li>
 								<li><a href="/#cta">Coordonnées/Contact</a></li>
 							</ul>
