--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -245,5 +245,13 @@
             </ul>
         </div>
     </section>
+    <section id="four" class="wrapper style1 special">
+        <div class="inner">
+            <header class="major">
+                <h2>Parcours</h2>
+            </header>
+            
+        </div>
+    </section>
 
     {% include footer.html %}
