Change project pictures and add link for spacetrip project

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,7 +2,7 @@
 
 <article id="main">
     <header
-        style="background-image: url('/assets/css/images/{{page.image}}-lg.png');background-size: 100%">
+        style="background-image: url('/assets/css/images/{{page.image}}-lg.png');background-size: contain;background-position-x: center;background-position-y: center;">
         <h2>{{page.title}}</h2>
         <p>{{page.description}}</p>
     </header>
